# aoc2023

./: .gitignore  README.md  advent-of-code2023.cabal
app/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  InputData.hs  Main.hs
