cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas Borjesson
maintainer:         lucas.borjesson@zimpler.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable advent-of-code2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
          InputData
        , Day1
        , Day2
        , Day3
        , Day4

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base ^>=4.16.4.0
        , http-conduit
        , http-types
        , bytestring
        , time
        , text
        , regex-tdfa
        , regex-posix
        , split

    hs-source-dirs:   app
    default-language: Haskell2010
